<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/biodata_diri"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/purple"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="225dp"
        android:layout_height="253dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        app:srcCompat="@drawable/fotosuci"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/nim"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/prodi"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/semester"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/hobi"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="54dp"
        android:text="@string/alamat"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:text="@string/matkul"
        android:textAlignment="center"
        android:textStyle="bold"/>

</RelativeLayout>